# git-dungeon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GitDungeon.spec  Makefile  README.md  README.zh-CN.md  SECURITY.md  f51.txt  f52.txt  f53.txt  f54.txt  f56.txt  f57.txt  f58.txt  f59.txt  f61.txt  f62.txt  f63.txt  f64.txt  f65.txt  f67.txt  f68.txt  f69.txt  f70.txt  f71.txt  f72.txt  f73.txt  f74.txt  f75.txt  f78.txt  f79.txt  f80.txt  f81.txt  f82.txt  f83.txt  f84.txt  (+27 more)
.git_dungeon_cache/: ai_text.sqlite
.github/workflows/: ci.yml  nightly.yml  release.yml
assets/: CREDITS.md  manifest_sprites.json
assets/audio/bgm/: USAGE.md  gameover.notes.md
assets/source_prompts/: boss_ci_sentinel.md  boss_fix.md  boss_merge_conflict.md  boss_refactor.md  boss_release_gate.md  boss_secret_leak.md  player_pixel.md  title_banner.md
assets/source_prompts/phase14b/: dungeon_sheet.md
assets/source_prompts/phase15/: battle_sheet.md
assets/source_prompts/phase16/: noncombat_sheet.md
assets/source_prompts/phase17/: theme_sheet.md
benchmarks/: __init__.py  profile_performance.py  repo_factory.py  run.py
benchmarks/baselines/: small_baseline.json
content_packs/example_pack/: pack.yml
demos/: git-dungeon-article.md  play_demo.py
docs/: AI_TEXT.md  BUGS.md  BUILD.md  CONTENT_PACKS.md  FAQ.md  OPTIMIZATION.md  PHASE2.md  PHASE3.md  PHASE4.md  PIXEL_UI_LAYOUT_LESSONS.md  PLAN_M2-M6.md  STORY.md  TESTING_FRAMEWORK.md  perf.md  plan.md
docs/screenshots/pixel/: manifest.json
handoffs/: 2026-05-04-pixel-phase-0-handoff.md  2026-05-04-pixel-phase-1-handoff.md  2026-05-04-pixel-phase-2-handoff.md  2026-05-04-pixel-phase-3-handoff.md  2026-05-04-pixel-phase-4-handoff.md  2026-05-04-pixel-phase-5-handoff.md  2026-05-05-pixel-phase-6-handoff.md  2026-05-05-pixel-phase-7-handoff.md  2026-05-06-pixel-phase-10-handoff.md  2026-05-06-pixel-phase-11-handoff.md  2026-05-06-pixel-phase-12-handoff.md  2026-05-06-pixel-phase-8-handoff.md  2026-05-06-pixel-phase-9-handoff.md  2026-05-07-pixel-phase-13-handoff.md  2026-05-07-pixel-phase-13r-handoff.md  2026-05-07-pixel-phase-14a-handoff.md  2026-05-08-pixel-phase-14b-handoff.md  2026-05-08-pixel-phase-14c-handoff.md  2026-05-08-pixel-phase-15-handoff.md  2026-05-08-pixel-phase-16-handoff.md  2026-05-08-pixel-phase-17-handoff.md  2026-05-08-pixel-phase-18-handoff.md  2026-05-08-pixel-ui-layout-review-handoff.md  2026-05-10-pixel-phase-19-handoff.md  2026-05-10-pixel-phase-20-handoff.md  2026-05-10-pixel-phase-21-handoff.md  2026-05-10-pixel-phase-22-handoff.md  2026-05-10-pixel-phase-23-handoff.md  2026-05-10-pixel-phase-24-handoff.md  2026-05-10-pixel-phase-25-handoff.md  README.md
plans/: README.md  dungeon-rooms-plan.md  pixel-game-fix-plan.md  pixel-game-issues.md  pixel-pc-release-checklist.md  pixel-phase18-final-playtest.md  pixel-phases.md  pixel-stardew-level-repair-plan.md  pixel-ui-event-stardew-gap-review.md
scripts/: build.bat  build.sh  build_contact_sheet.py  ci_smoke_demo.sh  compare_run_metrics.py  health_check.py  lint.sh  postprocess_pixel_assets.py  render_pixel_screens.py  test.sh  verify_assets.py  verify_audio.py  verify_pixel_assets.py
src/: __init__.py  main.py  main_cli.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  character.py  combat.py  entity.py  game_engine.py  git_parser.py  resource_manager.py  save_system.py  system.py
src/core/lua/: lua_engine.py
src/core/utils/: __init__.py  exceptions.py  logger.py
src/git_dungeon/: __init__.py  __main__.py  main.py  main_cli.py  main_cli_ai.py  main_tui.py
src/git_dungeon/ai/: __init__.py  cache.py  client_base.py  client_copilot.py  client_gemini.py  client_mock.py  client_null.py  client_openai.py  fallbacks.py  integration.py  prompts.py  sanitize.py  types.py
src/git_dungeon/config/: settings.py
src/git_dungeon/content/: __init__.py  loader.py  packs.py  runtime_loader.py  schema.py
src/git_dungeon/core/: character.py  combat.py  component.py  (+10 more)
src/ui/: combat_screen.py  inventory_screen.py
src/utils/: __init__.py  exceptions.py  helpers.py
tests/: conftest.py  golden_test.py  test_all.py  test_cli.py  test_edge_cases.py  test_full_functionality.py  test_full_gameplay.py  test_golden.py  test_i18n.py  test_m2_elite_boss.py  test_m2_event_effects.py  test_m2_route.py  test_m3_characters.py  test_m3_full_automation.py  test_m3_meta.py  test_m3_packs.py
tests/functional/: test_edge_cases_func.py  test_m2_func.py  test_m3_characters_func.py  test_m3_meta_func.py  test_m3_packs_func.py  test_m6_ai_integration.py  test_m6_ai_text_func.py  test_strict_packs_func.py
tests/golden/: m2_elite_boss_phase_snapshot.json  m2_elite_boss_rewards.json  m2_route_branch_influence.json  m2_route_graph_determinism.json  m3_character_starters.json  m3_meta_profile_default.json  m3_pack_unlock_filter_strict.json  m3_packs_info.json  m3_points_calculation.json  m6_ai_golden.json
tests/harness/: assertions.py  check_test_structure.py  scenario.py  snapshots.py
tests/integration/: test_full_gameplay.py  test_integration_full.py  test_pixel_cli_parity.py  test_pixel_smoke.py  test_skill_combat.py
tests/unit/: test_ai_clients_prompt.py  test_auto_policy.py  test_benchmarks.py  test_chapter_config_overrides.py  test_chapter_rules.py  test_character.py  test_combat.py  test_combat_ui.py  test_content_loader.py  test_daily_helpers.py  test_git_parser.py  test_inventory.py  test_inventory_ui.py  test_leveling.py  test_lua_engine.py  test_m4_difficulty.py  test_m5_achievements.py  test_main.py  test_main_cli_ai.py  test_main_cli_compact.py  test_main_cli_event_nodes.py  test_main_cli_nodes.py  test_main_cli_performance.py  test_mutators.py  test_node_flow.py  test_pixel_assets.py  test_pixel_audio.py  test_pixel_phase1.py  test_pixel_phase10.py  test_pixel_phase11.py  test_pixel_phase12.py  test_pixel_phase13.py  test_pixel_phase14a.py  test_pixel_phase14b.py  test_pixel_phase14c.py  test_pixel_phase15.py  test_pixel_phase16.py  test_pixel_phase17.py  test_pixel_phase18.py  test_pixel_phase19.py  (+18 more)
(+74 files in other folders)
