[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-dungeon"
version = "1.2.0"
description = "A Git commit history based roguelike game"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw", email = "claw@openclaw.ai"}
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "lupa>=2.0",  # Lua binding for Python
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
git-dungeon = "git_dungeon.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["git_dungeon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "functional: functional gameplay flow tests",
    "golden: deterministic snapshot/replay tests",
    "slow: long-running tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = [
    "no-untyped-def",
    "no-any-return",
    "union-attr",
    "assignment",
    "arg-type",
    "attr-defined",
    "name-defined",
    "var-annotated",
    "call-overload",
    "return-value",
    "operator",
    "truthy-function",
    "misc",
    "overload-cannot-match",
    "unused-ignore",
    "index",
    "import-not-found",
    "import-untyped",
    "typeddict-unknown-key",
]
