[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-dungeon"
version = "1.2.0"
description = "A Git commit history based roguelike game"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw", email = "claw@openclaw.ai"}
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "lupa>=2.0",  # Lua binding for Python
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pixel = [
    "pygame-ce>=2.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "Pillow>=10.0.0",  # asset verify + contact sheet generation
]

[project.scripts]
git-dungeon = "git_dungeon.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["git_dungeon*"]

[tool.setuptools.package-data]
git_dungeon = [
    "content/defaults/*.yml",
    "content/packs/*/*.yml",
]

[tool.setuptools.data-files]
"git_dungeon/assets" = [
    "assets/CREDITS.md",
    "assets/manifest_sprites.json",
]
"git_dungeon/assets/audio/bgm" = [
    "assets/audio/bgm/boss.ogg",
    "assets/audio/bgm/chapter.ogg",
    "assets/audio/bgm/gameover.ogg",
    "assets/audio/bgm/title.ogg",
]
"git_dungeon/assets/audio/sfx/kenney_rpg_audio/Audio" = [
    "assets/audio/sfx/kenney_rpg_audio/Audio/bookFlip1.ogg",
    "assets/audio/sfx/kenney_rpg_audio/Audio/bookOpen.ogg",
    "assets/audio/sfx/kenney_rpg_audio/Audio/chop.ogg",
    "assets/audio/sfx/kenney_rpg_audio/Audio/cloth2.ogg",
    "assets/audio/sfx/kenney_rpg_audio/Audio/clothBelt.ogg",
    "assets/audio/sfx/kenney_rpg_audio/Audio/handleCoins.ogg",
    "assets/audio/sfx/kenney_rpg_audio/Audio/knifeSlice.ogg",
    "assets/audio/sfx/kenney_rpg_audio/Audio/metalClick.ogg",
    "assets/audio/sfx/kenney_rpg_audio/Audio/metalPot3.ogg",
]
"git_dungeon/assets/audio/sfx/kenney_ui_audio/Audio" = [
    "assets/audio/sfx/kenney_ui_audio/Audio/click1.ogg",
    "assets/audio/sfx/kenney_ui_audio/Audio/click2.ogg",
    "assets/audio/sfx/kenney_ui_audio/Audio/switch10.ogg",
]
"git_dungeon/assets/fonts/ark_pixel" = [
    "assets/fonts/ark_pixel/ark-pixel-12px-proportional-zh_cn.ttf",
    "assets/fonts/ark_pixel/OFL.txt",
]
"git_dungeon/assets/fonts/vt323" = [
    "assets/fonts/vt323/VT323-Regular.ttf",
]
"git_dungeon/assets/sprites/kenney_tiny_dungeon/Tiles" = [
    "assets/sprites/kenney_tiny_dungeon/Tiles/tile_0029.png",
    "assets/sprites/kenney_tiny_dungeon/Tiles/tile_0066.png",
    "assets/sprites/kenney_tiny_dungeon/Tiles/tile_0085.png",
    "assets/sprites/kenney_tiny_dungeon/Tiles/tile_0090.png",
    "assets/sprites/kenney_tiny_dungeon/Tiles/tile_0103.png",
    "assets/sprites/kenney_tiny_dungeon/Tiles/tile_0108.png",
    "assets/sprites/kenney_tiny_dungeon/Tiles/tile_0122.png",
    "assets/sprites/kenney_tiny_dungeon/Tiles/tile_0123.png",
]
"git_dungeon/assets/sprites/kenney_ui/PNG/Blue/Default" = [
    "assets/sprites/kenney_ui/PNG/Blue/Default/button_rectangle_depth_flat.png",
    "assets/sprites/kenney_ui/PNG/Blue/Default/button_rectangle_flat.png",
    "assets/sprites/kenney_ui/PNG/Blue/Default/slide_horizontal_color.png",
    "assets/sprites/kenney_ui/PNG/Blue/Default/slide_horizontal_grey.png",
]
"git_dungeon/assets/sprites/kenney_ui/PNG/Extra/Default" = [
    "assets/sprites/kenney_ui/PNG/Extra/Default/input_rectangle.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "functional: functional gameplay flow tests",
    "golden: deterministic snapshot/replay tests",
    "slow: long-running tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = [
    "no-untyped-def",
    "no-any-return",
    "union-attr",
    "assignment",
    "var-annotated",
    "call-overload",
    "return-value",
    "operator",
    "truthy-function",
    "misc",
    "overload-cannot-match",
    "unused-ignore",
    "index",
    "import-not-found",
    "import-untyped",
    "typeddict-unknown-key",
]
